--- a/stt/stt/Cargo.toml
+++ b/stt/stt/Cargo.toml
@@ -21,5 +21,6 @@ http = "=1.3.1"
 url = "2.5.4"
 wstd = "0.5.3"
 wasi-logger = "0.1.2"
+uuid = { version = "1.17.0", features = ["v4"] }
 
 derive_more = { version = "2.0.1", features = ["from"] }
