chrono / removed iso

--- a/graph/neo4j/Cargo.toml
+++ b/graph/neo4j/Cargo.toml
@@ -25,6 +25,7 @@ serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
 base64 = { workspace = true }
 reqwest = { workspace = true}
+chrono = { version = "0.4", features = ["serde"] }
 
 [package.metadata.component]
 package = "golem:graph-neo4j"
