--- a/test-stt/components-rust/test-stt/golem.yaml
+++ b/test-stt/components-rust/test-stt/golem.yaml
@@ -10,33 +10,6 @@ components:
   test:stt:
     profiles:
       # DEBUG PROFILES
-      whisper-debug:
-        files:
-          - sourcePath: samples/jfk.mp3
-            targetPath: /samples/jfk.mp3
-            permissions: read-only
-          - sourcePath: samples/mm1.wav
-            targetPath: /samples/mm1.wav
-            permissions: read-only
-        build:
-          - command: cargo component build --no-default-features --features whisper
-            sources:
-              - src
-              - wit-generated
-            targets:
-              - ../../target/wasm32-wasip1/debug/test_stt.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_stt_whisper.wasm ../../target/wasm32-wasip1/debug/test_stt.wasm -o ../../target/wasm32-wasip1/debug/test_whisper_stt_plugged.wasm
-            sources:
-              - ../../target/wasm32-wasip1/debug/test_stt.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_stt_whispers.wasm
-            targets:
-              - ../../target/wasm32-wasip1/debug/test_whisper_stt_plugged.wasm
-        sourceWit: wit
-        generatedWit: wit-generated
-        componentWasm: ../../target/wasm32-wasip1/debug/test_whisper_stt_plugged.wasm
-        linkedWasm: ../../golem-temp/components/test_whisper_stt_debug.wasm
-        clean:
-          - src/bindings.rs
       aws-debug:
         files:
           - sourcePath: samples/jfk.mp3
@@ -64,6 +37,33 @@ components:
         linkedWasm: ../../golem-temp/components/test_aws_stt_debug.wasm
         clean:
           - src/bindings.rs
+      azure-debug:
+        files:
+          - sourcePath: samples/jfk.mp3
+            targetPath: /samples/jfk.mp3
+            permissions: read-only
+          - sourcePath: samples/mm1.wav
+            targetPath: /samples/mm1.wav
+            permissions: read-only
+        build:
+          - command: cargo component build --no-default-features --features azure
+            sources:
+              - src
+              - wit-generated
+            targets:
+              - ../../target/wasm32-wasip1/debug/test_stt.wasm
+          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_stt_azure.wasm ../../target/wasm32-wasip1/debug/test_stt.wasm -o ../../target/wasm32-wasip1/debug/test_azure_stt_plugged.wasm
+            sources:
+              - ../../target/wasm32-wasip1/debug/test_stt.wasm
+              - ../../../target/wasm32-wasip1/debug/golem_stt_azure.wasm
+            targets:
+              - ../../target/wasm32-wasip1/debug/test_azure_stt_plugged.wasm
+        sourceWit: wit
+        generatedWit: wit-generated
+        componentWasm: ../../target/wasm32-wasip1/debug/test_azure_stt_plugged.wasm
+        linkedWasm: ../../golem-temp/components/test_azure_stt_debug.wasm
+        clean:
+          - src/bindings.rs
       deepgram-debug:
         files:
           - sourcePath: samples/jfk.mp3
@@ -89,6 +89,33 @@ components:
         generatedWit: wit-generated
         componentWasm: ../../target/wasm32-wasip1/debug/test_deepgram_stt_plugged.wasm
         linkedWasm: ../../golem-temp/components/test_deepgram_stt_debug.wasm
+        clean:
+          - src/bindings.rs
+      whisper-debug:
+        files:
+          - sourcePath: samples/jfk.mp3
+            targetPath: /samples/jfk.mp3
+            permissions: read-only
+          - sourcePath: samples/mm1.wav
+            targetPath: /samples/mm1.wav
+            permissions: read-only
+        build:
+          - command: cargo component build --no-default-features --features whisper
+            sources:
+              - src
+              - wit-generated
+            targets:
+              - ../../target/wasm32-wasip1/debug/test_stt.wasm
+          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_stt_whisper.wasm ../../target/wasm32-wasip1/debug/test_stt.wasm -o ../../target/wasm32-wasip1/debug/test_whisper_stt_plugged.wasm
+            sources:
+              - ../../target/wasm32-wasip1/debug/test_stt.wasm
+              - ../../../target/wasm32-wasip1/debug/golem_stt_whisper.wasm
+            targets:
+              - ../../target/wasm32-wasip1/debug/test_whisper_stt_plugged.wasm
+        sourceWit: wit
+        generatedWit: wit-generated
+        componentWasm: ../../target/wasm32-wasip1/debug/test_whisper_stt_plugged.wasm
+        linkedWasm: ../../golem-temp/components/test_whisper_stt_debug.wasm
         clean:
           - src/bindings.rs
 
