--- a/test/video-advanced/components-rust/test-video-advanced/Cargo.toml
+++ b/test/video-advanced/components-rust/test-video-advanced/Cargo.toml
@@ -15,7 +15,11 @@ kling = []
 path = "wit-generated"
 
 [package.metadata.component.target.dependencies]
+"wasi:io" = { path = "wit-generated/deps/io" }
+"wasi:clocks" = { path = "wit-generated/deps/clocks" }
+"golem:rpc" = { path = "wit-generated/deps/golem-rpc" }
 "golem:video-generation" = { path = "wit-generated/deps/golem-video" }
+"test:helper-client" = { path = "wit-generated/deps/test_helper-client" }
 "test:video-advanced-exports" = { path = "wit-generated/deps/test_video-advanced-exports" }
 
 [lib]
@@ -24,4 +28,5 @@ crate-type = ["cdylib"]
 required-features = []
 
 [dependencies]
+golem-rust = { workspace = true }
 wit-bindgen-rt = { workspace = true }
