--- a/test/video-advanced/components-rust/test-video-advanced/golem.yaml
+++ b/test/video-advanced/components-rust/test-video-advanced/golem.yaml
@@ -93,10 +93,7 @@ components:
           - src/bindings.rs
     defaultProfile: kling-debug
 
-# Example for adding dependencies for Worker to Worker communication:
-# See https://learn.golem.cloud/docs/app-manifest#fields_dependencies for more information
-#
-#dependencies:
-#  test:video-advanced:
-#  - target: <target component name to be called>
-#    type: wasm-rpc
+dependencies:
+  test:video-advanced:
+  - target: test:helper
+    type: wasm-rpc
