--- a/test/video-advanced/components-rust/test-video-advanced/Cargo.toml
+++ b/test/video-advanced/components-rust/test-video-advanced/Cargo.toml
@@ -22,6 +22,13 @@ path = "wit-generated"
 "test:helper-client" = { path = "wit-generated/deps/test_helper-client" }
 "test:video-advanced-exports" = { path = "wit-generated/deps/test_video-advanced-exports" }
 
+[package.metadata.component.bindings]
+
+[package.metadata.component.bindings.with]
+"wasi:io/poll@0.2.0" = "golem_rust::wasm_rpc::wasi::io::poll"
+"wasi:clocks/wall-clock@0.2.0" = "golem_rust::wasm_rpc::wasi::clocks::wall_clock"
+"golem:rpc/types@0.2.0" = "golem_rust::wasm_rpc::golem_rpc_0_2_x::types"
+
 [lib]
 path = "src/lib.rs"
 crate-type = ["cdylib"]
