--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ members = [
     "llm/ollama",
     "llm/openai",
     "llm/openrouter",
+    "exec/exec",
+    "exec/javascript",
+    "exec/python",
 ]
 
 [profile.release]
@@ -18,6 +21,9 @@ opt-level = 's'
 
 [workspace.dependencies]
 golem-llm = { path = "llm/llm", version = "0.0.0", default-features = false }
+golem-exec = { path = "exec/exec", version = "0.0.0", default-features = false }
+
+futures = "0.3.31"
 golem-rust = "1.6.0"
 log = "0.4.27"
 reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-may-2025", features = [
@@ -25,5 +31,7 @@ reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-may-
 ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
+wasi = "0.14.1+wasi-0.2.3"
+wstd = "0.5.3"
 wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }
 base64 = { version = "0.22.1" }
