--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,3 +45,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }
 base64 = { version = "0.22.1" }
+mime_guess = { version = "2.0.5" }
+url = { version = "2.5.4" }
