--- a/llm/ollama/Cargo.toml
+++ b/llm/ollama/Cargo.toml
@@ -18,9 +18,9 @@ durability = ["golem-rust/durability", "golem-llm/durability"]
 
 [dependencies]
 golem-llm = { workspace = true }
-base64 = "0.21"
-mime_guess = "2.0"
-url = "2.4"
+base64 = { workspace = true }
+mime_guess = { workspace = true }
+url = { workspace = true }
 
 golem-rust = { workspace = true }
 log = { workspace = true }
