--- a/video/video/Cargo.toml
+++ b/video/video/Cargo.toml
@@ -20,7 +20,7 @@ reqwest = { workspace = true }
 thiserror = "2.0.12"
 wasi-logger = "0.1.2"
 wit-bindgen = { version = "0.40.0" }
-mime_guess = "2.0.5"
+mime_guess = { workspace = true }
 
 [features]
 default = ["durability"]
