--- a/test/exec/components-rust/test-exec-py/golem.yaml
+++ b/test/exec/components-rust/test-exec-py/golem.yaml
@@ -13,4 +13,4 @@ components:
 dependencies:
   test:exec-py:
     - type: wasm
-      path: ../target/debug/golem_exec.wasm
+      path: ../../target/debug/golem_exec.wasm
