--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,18 +35,18 @@ opt-level = 's'
 
 [workspace.dependencies]
 golem-llm = { path = "llm/llm", version = "0.0.0", default-features = false }
-golem-search = { path = "search/search", version = "0.0.0", default-features = false}
-golem-video = { path = "video/video", version = "0.0.0", default-features = false}
+golem-search = { path = "search/search", version = "0.0.0", default-features = false }
+golem-video = { path = "video/video", version = "0.0.0", default-features = false }
 
 futures = "0.3.31"
-golem-rust = "1.6.0"
+golem-rust = "=1.5.5"
 log = "0.4.27"
 reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-may-2025", features = [
     "json",
 ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
-wasi = "0.14.1+wasi-0.2.3"
-wstd = "0.5.3"
+wasi = "=0.13.1+wasi-0.2.0"
+wstd = { git = "https://github.com/golemcloud/wstd", branch = "0.5.3-wasi-0.2.0" }
 wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }
 base64 = { version = "0.22.1" }
