--- a/test/exec/components-rust/test-exec-js/Cargo.toml
+++ b/test/exec/components-rust/test-exec-js/Cargo.toml
@@ -23,15 +23,16 @@ wit-bindgen-rt = { workspace = true }
 path = "wit-generated"
 
 [package.metadata.component.bindings.with]
+"wasi:io/poll@0.2.0" = "golem_rust::wasm_rpc::wasi::io::poll"
+"wasi:clocks/wall-clock@0.2.0" = "golem_rust::wasm_rpc::wasi::clocks::wall_clock"
+"golem:rpc/types@0.2.0" = "golem_rust::wasm_rpc::golem_rpc_0_2_x::types"
 
 [package.metadata.component.target.dependencies]
 "golem:exec" = { path = "wit-generated/deps/golem-exec" }
-"wasi:io" = { path = "wit-generated/deps/wasi_io" }
-"wasi:cli" = { path = "wit-generated/deps/wasi_cli" }
-"wasi:clocks" = { path = "wit-generated/deps/wasi_clocks" }
-"wasi:filesystem" = { path = "wit-generated/deps/wasi_filesystem" }
-"wasi:random" = { path = "wit-generated/deps/wasi_random" }
-"root:component" = { path = "wit-generated/deps/root_component" }
+"wasi:io" = { path = "wit-generated/deps/io" }
+"wasi:clocks" = { path = "wit-generated/deps/clocks" }
+"golem:rpc" = { path = "wit-generated/deps/golem-rpc" }
+"test:helper-client" = { path = "wit-generated/deps/test_helper-client" }
 "test:exec-js-exports" = { path = "wit-generated/deps/test_exec-js-exports" }
 
 [package.metadata.component.bindings]
