--- a/graph/janusgraph/Cargo.toml
+++ b/graph/janusgraph/Cargo.toml
@@ -25,6 +25,7 @@ wit-bindgen-rt = { workspace = true }
 base64 = { workspace = true }
 reqwest = { workspace = true}
 uuid = "1.17.0"
+chrono = { version = "0.4", features = ["serde"] }
 
 [package.metadata.component]
 package = "golem:graph-janusgraph"
