--- a/stt/google/Cargo.toml
+++ b/stt/google/Cargo.toml
@@ -25,6 +25,7 @@ http = "=1.3.1"
 url = "2.5.4"
 wstd = "0.5.3"
 futures-concurrency = "7.6.3"
+async-lock = "3.4.0"
 itertools = "0.14.0"
 chrono = "0.4.41"
 urlencoding = "2.1.3"
