trying to start workers first

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -302,10 +302,16 @@ jobs:
           cargo make --cwd graph build-janusgraph
           cargo make --cwd graph build-neo4j
           cd test/graph
-          
-          echo "Testing ArangoDB integration..."
+
+          echo "Starting workers"
           golem app deploy -b arangodb-debug test:graph test:helper
           golem worker new -e ARANGODB_HOST=localhost -e ARANGODB_USER="" -e ARANGODB_PASSWORD="" -e ARANGODB_PORT="8529" -e ARANGODB_DATABASE="test" test:graph/arangodb-1
+          golem app deploy -b janusgraph-debug test:graph test:helper
+          golem worker new -e JANUSGRAPH_HOST=localhost -e JANUSGRAPH_USER="" -e JANUSGRAPH_PASSWORD="" -e JANUSGRAPH_PORT="8182" test:graph/janusgraph-1
+          golem app deploy -b neo4j-debug test:graph test:helper
+          golem worker new -e NEO4J_HOST=localhost -e NEO4J_USER=neo4j -e NEO4J_PASSWORD=password -e NEO4J_PORT="7474" -e NEO4J_DATABASE=neo4j test:graph/neo4j-1
+          
+          echo "Testing ArangoDB integration..."
           golem worker invoke test:graph/arangodb-1 test1 | grep -v "ERROR: "
           golem worker invoke test:graph/arangodb-1 test2 | grep -v "ERROR: "
           golem worker invoke test:graph/arangodb-1 test3 | grep -v "ERROR: "
@@ -316,8 +322,6 @@ jobs:
           echo "ArangoDB tests completed successfully"
           
           echo "Testing JanusGraph integration..."
-          golem app deploy -b janusgraph-debug test:graph test:helper
-          golem worker new -e JANUSGRAPH_HOST=localhost -e JANUSGRAPH_USER="" -e JANUSGRAPH_PASSWORD="" -e JANUSGRAPH_PORT="8182" test:graph/janusgraph-1
           golem worker invoke test:graph/janusgraph-1 test1 | grep -v "ERROR: "
           golem worker invoke test:graph/janusgraph-1 test2 | grep -v "ERROR: "
           golem worker invoke test:graph/janusgraph-1 test3 | grep -v "ERROR: "
@@ -328,8 +332,6 @@ jobs:
           echo "JanusGraph tests completed successfully"
           
           echo "Testing Neo4j integration..."
-          golem app deploy -b neo4j-debug test:graph test:helper
-          golem worker new -e NEO4J_HOST=localhost -e NEO4J_USER=neo4j -e NEO4J_PASSWORD=password -e NEO4J_PORT="7474" -e NEO4J_DATABASE=neo4j test:graph/neo4j-1
           golem worker invoke test:graph/neo4j-1 test1 | grep -v "ERROR: "
           golem worker invoke test:graph/neo4j-1 test2 | grep -v "ERROR: "
           golem worker invoke test:graph/neo4j-1 test3 | grep -v "ERROR: "
