--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ lto = true
 opt-level = 's'
 
 [workspace.dependencies]
-golem-rust = "1.6.0"
+golem-rust = "=1.5.5"
 log = "0.4.27"
 golem-llm = { path = "llm/llm", version = "0.0.0", default-features = false }
 golem-stt = { path = "stt/stt", version = "0.0.0" }
@@ -31,6 +31,7 @@ reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-may-
     "json",
     "multipart",
 ] }
+wstd = { git = "https://github.com/golemcloud/wstd", branch = "0.5.3-wasi-0.2.0" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }
