--- a/stt/aws/Cargo.toml
+++ b/stt/aws/Cargo.toml
@@ -19,6 +19,7 @@ log = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
+wstd = { workspace = true }
 derive_more = { version = "2.0.1", features = ["from"] }
 hmac = "0.12.1"
 sha2 = "0.10.9"
@@ -27,7 +28,6 @@ http = "=1.3.1"
 url = "2.5.4"
 percent-encoding = "=2.3.1"
 chrono = "0.4.41"
-wstd = "0.5.3"
 futures-concurrency = "7.6.3"
 itertools = "0.14.0"
 
