--- a/stt/azure/Cargo.toml
+++ b/stt/azure/Cargo.toml
@@ -19,11 +19,11 @@ log = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
+wstd = { workspace = true }
+futures-concurrency = "7.6.3"
 derive_more = { version = "2.0.1", features = ["from"] }
 http = "=1.3.1"
 url = "2.5.4"
-wstd = "0.5.3"
-futures-concurrency = "7.6.3"
 itertools = "0.14.0"
 
 [dev-dependencies]
