--- a/stt/deepgram/Cargo.toml
+++ b/stt/deepgram/Cargo.toml
@@ -19,10 +19,10 @@ log = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
+wstd = { workspace = true }
 derive_more = { version = "2.0.1", features = ["from"] }
 http = "=1.3.1"
 url = "2.5.4"
-wstd = "0.5.3"
 futures-concurrency = "7.6.3"
 itertools = "0.14.0"
 
