--- a/stt/google/Cargo.toml
+++ b/stt/google/Cargo.toml
@@ -20,15 +20,16 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
 base64 = { workspace = true }
+wstd = { workspace = true }
 derive_more = { version = "2.0.1", features = ["from"] }
 http = "=1.3.1"
 url = "2.5.4"
-wstd = "0.5.3"
 futures-concurrency = "7.6.3"
 async-lock = "3.4.0"
 itertools = "0.14.0"
 chrono = "0.4.41"
 urlencoding = "2.1.3"
+once_cell = "1.21.3"
 # Cryptographic dependencies for proper JWT signing
 rsa = "0.9.8"
 sha2 = { version = "0.10.9", features = ["oid"] }
