--- a/stt/stt/Cargo.toml
+++ b/stt/stt/Cargo.toml
@@ -17,9 +17,9 @@ log = { workspace = true }
 wit-bindgen = { version = "0.40.0" }
 serde = { workspace = true }
 serde_json = { workspace = true }
+wstd = { workspace = true }
 http = "=1.3.1"
 url = "2.5.4"
-wstd = "0.5.3"
 wasi-logger = "0.1.2"
 uuid = { version = "1.17.0", features = ["v4"] }
 
