--- a/stt/whisper/Cargo.toml
+++ b/stt/whisper/Cargo.toml
@@ -19,10 +19,11 @@ log = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
+wstd = { workspace = true }
 derive_more = { version = "2.0.1", features = ["from"] }
 http = "=1.3.1"
 uuid = { version = "1.17.0", features = ["v4"] }
-wstd = "0.5.3"
+
 futures-concurrency = "7.6.3"
 itertools = "0.14.0"
 
