--- a/stt/aws/Cargo.toml
+++ b/stt/aws/Cargo.toml
@@ -30,6 +30,7 @@ percent-encoding = "=2.3.1"
 chrono = "0.4.41"
 futures-concurrency = "7.6.3"
 itertools = "0.14.0"
+once_cell = "1.21.3"
 
 [dev-dependencies]
 aws-sigv4 = "1.2.6"
