--- a/stt/azure/Cargo.toml
+++ b/stt/azure/Cargo.toml
@@ -25,6 +25,7 @@ derive_more = { version = "2.0.1", features = ["from"] }
 http = "=1.3.1"
 url = "2.5.4"
 itertools = "0.14.0"
+once_cell = "1.21.3"
 
 [dev-dependencies]
 multipart-2021 = "0.19.0"
