--- a/stt/whisper/Cargo.toml
+++ b/stt/whisper/Cargo.toml
@@ -23,6 +23,7 @@ wstd = { workspace = true }
 derive_more = { version = "2.0.1", features = ["from"] }
 http = "=1.3.1"
 uuid = { version = "1.17.0", features = ["v4"] }
+once_cell = "1.21.3"
 
 futures-concurrency = "7.6.3"
 itertools = "0.14.0"
