--- a/stt/stt/Cargo.toml
+++ b/stt/stt/Cargo.toml
@@ -22,5 +22,6 @@ http = "=1.3.1"
 url = "2.5.4"
 wasi-logger = "0.1.2"
 uuid = { version = "1.17.0", features = ["v4"] }
+bytes = "1.10.1"
 
 derive_more = { version = "2.0.1", features = ["from"] }
