--- a/stt/azure/Cargo.toml
+++ b/stt/azure/Cargo.toml
@@ -26,6 +26,7 @@ http = "=1.3.1"
 url = "2.5.4"
 itertools = "0.14.0"
 once_cell = "1.21.3"
+bytes = "1.10.1"
 
 [dev-dependencies]
 multipart-2021 = "0.19.0"
