--- a/stt/google/Cargo.toml
+++ b/stt/google/Cargo.toml
@@ -30,6 +30,7 @@ itertools = "0.14.0"
 chrono = "0.4.41"
 urlencoding = "2.1.3"
 once_cell = "1.21.3"
+bytes = "1.10.1"
 # Cryptographic dependencies for proper JWT signing
 rsa = "0.9.8"
 sha2 = { version = "0.10.9", features = ["oid"] }
