--- a/stt/whisper/Cargo.toml
+++ b/stt/whisper/Cargo.toml
@@ -24,6 +24,7 @@ derive_more = { version = "2.0.1", features = ["from"] }
 http = "=1.3.1"
 uuid = { version = "1.17.0", features = ["v4"] }
 once_cell = "1.21.3"
+bytes = "1.10.1"
 
 futures-concurrency = "7.6.3"
 itertools = "0.14.0"
