--- a/stt/stt/Cargo.toml
+++ b/stt/stt/Cargo.toml
@@ -25,3 +25,7 @@ uuid = { version = "1.17.0", features = ["v4"] }
 bytes = "1.10.1"
 
 derive_more = { version = "2.0.1", features = ["from"] }
+
+[features]
+default = ["durability"]
+durability = ["golem-rust/durability"]
