--- a/stt/whisper/Cargo.toml
+++ b/stt/whisper/Cargo.toml
@@ -11,6 +11,10 @@ description = "WebAssembly component for working with OpenAI Whisper transciptio
 path = "src/lib.rs"
 crate-type = ["cdylib"]
 
+[features]
+default = ["durability"]
+durability = ["golem-rust/durability", "golem-stt/durability"]
+
 [dependencies]
 golem-stt = { workspace = true }
 
