stt: set default features to false

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ golem-llm = { path = "llm/llm", version = "0.0.0", default-features = false }
 golem-search = { path = "search/search", version = "0.0.0", default-features = false }
 golem-graph = { path = "graph/graph", version = "0.0.0", default-features = false }
 golem-video = { path = "video/video", version = "0.0.0", default-features = false }
-golem-stt = { path = "stt/stt", version = "0.0.0" }
+golem-stt = { path = "stt/stt", version = "0.0.0", default-features = false }
 futures = "0.3.31"
 golem-rust = "=1.5.5"
 log = "0.4.27"
